--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
    ],
    "source": [
     "with open(\"Results/metrics.txt\", 'w') as outfile:\n",
-    "    outfile.write(f\"\\nAccuracy = {accuracy.round(2)}, F1 Score = {f1.round(2)}.\")\n",
+    "    outfile.write(f\"\\nAccuracy = {round(accuracy, 2)}, F1 Score = {round(f1, 2)}.\")\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import ConfusionMatrixDisplay, confusion_matrix\n",
